--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
     <header id="home">
         <h1 class="animate__animated animate__fadeInDown"Philemon Doe Green</h1>
         <p class="animate__animated animate__fadeInUp">Philemon Doe Green</p>
- <p class="animate__animated animate__fadeInUp">Data Analyst</p>
+ <p class="animate__animated animate__fadeInUp">Software Engineer</p>
 
     </header>
 <div class="image-container">
@@ -407,21 +407,20 @@
     <div class="container">
         <section id="bio">
             <h2>About Me</h2>
-            <p>Having completed high school, I am now pursuing Data Analytics to drive meaningful insights and solutions. Through the ALX Data Analytics Pathway, I’ve developed skills in data collection, analysis, and visualization.
+            <p>I am an aspiring Software Engineer passionate about building innovative solutions through technology. My hands-on experience at Bugi Computers has given me a strong foundation in hardware troubleshooting, software installation, and system optimization, strengthening my technical expertise and problem-solving skills.
 </p>
-            <p>I also gained technical experience at Bugi Computers, working on hardware troubleshooting, software installation, and system optimization. This hands-on work enhanced my problem-solving skills and deepened my tech knowledge.
-
+            <pAs part of a team project, I contributed to the development of a Real-Time Reporting App designed to combat illegal mining in Ghana. My role involved analyzing data and understanding system requirements, reinforcing my ability to design practical and impactful tech solutions.
 A key project I worked on involved tackling illegal mining in Ghana, where I helped develop a Real-Time Reporting App by analyzing data on its environmental and socio-economic impact.</p>
-            <p>I am eager to keep expanding my analytical and technical expertise to solve complex challenges and drive meaningful change.</p>
+            <p>Beyond my work in software development, I am also a skilled drummer. My dedication to drumming has enhanced my focus, discipline, and teamwork—qualities that I bring into my approach to engineering and problem-solving. I am committed to refining my coding skills and developing innovative software solutions that drive meaningful change</p>
         </section>
 
         <section id="portfolio">
             <h2>My Portfolio</h2>
             <div class="card-container">
                 <div class="card">
-                    <div class="card-image" style="background-image: url('analysis.jpg')"></div>
+                    <div class="card-image" style="background-image: url('Mobile App.png')"></div>
                     <div class="card-content">
-                        <h3 class="card-title">Data Manipulation</h3>
+                        <h3 class="card-title">Mobile App</h3>
                         <div>
                             <span class="card-tag">Python</span>
                             <span class="card-tag">SQL</span>
@@ -431,14 +430,14 @@ A key project I worked on involved tackling illegal mining in Ghana, where I hel
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-image" style="background-image: url('science.jpg')"></div>
+                    <div class="card-image" style="background-image: url('Website dev.png')"></div>
                     <div class="card-content">
-                        <h3 class="card-title">Data Visualisation</h3>
+                        <h3 class="card-title">Website Dev</h3>
                         <div>
-                            <span class="card-tag">PowerBi</span>
-                            <span class="card-tag">Plotly</span>
+                            <span class="card-tag">React</span>
+                            <span class="card-tag">JavaScript</span>
                         </div>
-                        <p>A work was completed on data visualization, focusing on creating clear and effective visual representations of data. This involved using tools like Tableau and Power BI to design interactive dashboards and charts, ensuring that the visual elements such as color, design, and typography enhanced the clarity and engagement of the data, while making complex information more accessible and insightful for users.</p>
+                        <p>AI developed this website to showcase my skills in web development, focusing on creating a user-friendly and responsive design.  I ensured a seamless experience across all devices. The project allowed me to enhance my expertise in front-end and back-end development, problem-solving, and delivering a functional, polished product.</p>
                     </div>
                 </div>
                 <div class="card">
